unpackaged/main/default/objects/Job_Order__c/Job_Order__c.object-meta.xml
<CustomObject>
    <label>Job Order</label>
    <nameField>
        <label>Job Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>