unpackaged/main/default/objects/Job_Order__c/fields/Accepted_by_QuickParts__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_QuickParts__c</fullName>
    <formula>if(Job__r.Accepted_by_QuickParts__c = true, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted by QuickParts?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>