unpackaged/main/default/objects/Job_Order__c/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>