unpackaged/main/default/objects/Job_Order__c/fields/OrderAndJobId__c.field-meta.xml
<CustomField>
    <fullName>OrderAndJobId__c</fullName>
    <description>Unique Key for junction
Format: Order ID - Job Id</description>
    <label>Order &amp; Job</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>