unpackaged/main/default/objects/Job_Order__c/fields/XometryJobID__c.field-meta.xml
<CustomField>
    <fullName>XometryJobID__c</fullName>
    <label>Xometry Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>