unpackaged/main/default/objects/Job_Order__c/fields/XometryOpsOrderID__c.field-meta.xml
<CustomField>
    <fullName>XometryOpsOrderID__c</fullName>
    <label>Xometry Ops Order ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>